--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
   @import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
-
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
 *{
     margin: 0%;
@@ -67,7 +67,7 @@ nav #bx-search{
     top: 0;
     left: 0;
     overflow-y: auto; /* Permet le défilement vertical lorsque le contenu dépasse la hauteur maximale */
-    transition: 0.5s ease-in;
+    transition: 0.4s ease-in;
   }
 
   
@@ -89,12 +89,11 @@ nav #bx-search{
    display: flex;
    justify-content: space-between;
    align-items: center;
-   font-size: 1.5rem !important;
    font-weight: 600;
    text-transform: uppercase;
    padding: 5px;
-   font-size: 0.8rem;
-   height: 100px;
+   font-size: 1.2rem !important;
+   height: 80px;
  }
  .burger-nav #vetements-link{
     
@@ -102,12 +101,11 @@ nav #bx-search{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 1.5rem !important;
+    font-size: 1.2rem !important;
     font-weight: 600;
     text-transform: uppercase;
     padding: 5px;
-    font-size: 0.8rem;
-    height: 100px;
+    height: 80px;
  }
  .burger-nav #frigo-link{
     
@@ -115,12 +113,11 @@ nav #bx-search{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 1.5rem !important;
+    font-size: 1.2rem !important;
     font-weight: 600;
     text-transform: uppercase;
     padding: 5px;
-    font-size: 0.8rem;
-    height: 100px;
+    height: 80px;
  }
  .burger-nav #phone-link{
     
@@ -128,12 +125,11 @@ nav #bx-search{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 1.5rem !important;
+    font-size: 1.2rem !important;
     font-weight: 600;
     text-transform: uppercase;
     padding: 5px;
-    font-size: 0.8rem;
-    height: 100px;
+    height: 80px;
  }
  .burger-nav #maison-link{
     
@@ -141,12 +137,11 @@ nav #bx-search{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 1.5rem !important;
+    font-size: 1.2rem !important;
     font-weight: 600;
     text-transform: uppercase;
     padding: 5px;
-    font-size: 0.8rem;
-    height: 100px;
+    height: 80px;
  }
 
  /* burger menu ici  */
@@ -163,26 +158,12 @@ body .promo {
 }
  /* la promo ici  */
 
- /* la video d acceil  */
- body video {
-    max-width: 100%;
-    max-height: 500px; /* Réglez la hauteur maximale souhaitée */
-    width: auto;
-    height: auto;
-    width: 100%;
-    height: auto;
-    position: relative; /* Assurez-vous que la vidéo est dans un contexte de positionnement relatif */
-
-    object-fit: cover; /* Ajuste la vidéo pour remplir tout l'espace disponible */
-  }
-  body .video-container {
-    margin-top: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 300px; /* Réglez la hauteur souhaitée pour le conteneur */
-  }
-  .video-container .overlay {
+ /* la img d acceil  */
+   body #img-accueil{
+      height: 600px;
+      width: 100%;
+   }
+  .img-container .overlay {
     font-family: 'Young Serif', serif;
     font-weight: bold;
     position:absolute;
@@ -190,21 +171,20 @@ body .promo {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: transparent
-    ;
+    background-color: transparent;
     color: white; /* Couleur du texte */
     text-align: center;
     font-size: 24px;
-    padding: 20px;
+    padding: 0;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     z-index: 1; /* Pour s'assurer que l'overlay est au-dessus de la vidéo */
   }
   
   body .overlay .button {
+   margin-top: 150px;
     padding: 1em 2em;
     border: none;
     border-radius: 5px;
@@ -218,6 +198,16 @@ body .promo {
     overflow: hidden;
     outline: 2px solid #0b0b0b;
   }
+  .overlay h2{
+   font-family: 'Anton', sans-serif;
+   font-weight: 400;
+   font-size: 2rem;
+   letter-spacing: 10px;
+   margin-top: 1px;
+   background: rgba(5, 5, 5, 0.3); /* Couleur de fond semi-transparente */
+   color: white;
+  }
+
   
   button:hover {
     color: #ffffff;
@@ -243,7 +233,7 @@ body .promo {
   button:hover::before {
     width: 200%;
   }
- /* la video d acceil  */
+ /* la img d acceil  */
 
  /* les cartes  */
  .row{
@@ -264,7 +254,10 @@ body .promo {
  /* APP pub ici */
  body .app-pub {
     margin-top: 100px;
-    background-image: linear-gradient(to left, rgb(193, 51, 222), rgb(206, 39, 201));
+    background: repeating-linear-gradient(60deg, transparent 30px, rgba(230, 43, 217, 0.2) 10px,rgba(242, 35, 187, 0.2) 90px),
+    repeating-linear-gradient(120deg, transparent 30px, rgba(233, 21, 226, 0.2) 10px,rgba(255, 0, 195, 0.2)90px),
+    repeating-linear-gradient(180deg, transparent 30px, rgba(178, 11, 158, 0.2) 10px, rgba(255, 0, 238, 0.2) 90px);
+    /* background-image: linear-gradient(to left, rgb(193, 51, 222), rgb(206, 39, 201)); */
     height: 260px;
     display: flex;
     flex-direction: column;
