--- a/views/composants/tab-bar.ejs
+++ b/views/composants/tab-bar.ejs
@@ -1,7 +1,135 @@
-<div class="nav-bar">
-    <a class="btn btn-outline-secondary" href="/">Accueil</a>
-    <a  class="btn btn-outline-secondary" href="/">Vetements</a>
-    <a  class="btn btn-outline-secondary" href="/">Maison</a>
-    <a  class="btn btn-outline-secondary" href="/">Telephonie</a>
-    <a  class="btn btn-outline-secondary" href="/">Electro-menager</a>
+<div class="slider-container nav-bar">
+    <h3 style="text-align: start; margin-left: 10px;">Nos categories</h3>
+    <div class="slider" id="slider">
+        <div class="nav-bar-card shadow-sm">
+            <div class="carte-top">
+                <p>Meubles et <br>
+                    deco
+                </p>
+            </div>
+            <div class="carte-bottom">
+
+            </div>
+        </div>
+        <div class="nav-bar-card shadow-sm">
+            <div class="carte-top">
+                <p>Meubles et <br>
+                    deco
+                </p>
+            </div>
+            <div class="carte-bottom">
+
+            </div>
+        </div>
+        <div class="nav-bar-card shadow-sm">
+            <div class="carte-top">
+                <p>Meubles et <br>
+                    deco
+                </p>
+            </div>
+            <div class="carte-bottom">
+
+            </div>
+        </div>
+        <div class="nav-bar-card shadow-sm">
+            <div class="carte-top">
+                <p>Meubles et <br>
+                    deco
+                </p>
+            </div>
+            <div class="carte-bottom">
+
+            </div>
+        </div>
+        <div class="nav-bar-card shadow-sm">
+            <div class="carte-top">
+                <p>Meubles et <br>
+                    deco
+                </p>
+            </div>
+            <div class="carte-bottom">
+
+            </div>
+        </div>
+        <div class="nav-bar-card shadow-sm">
+            <div class="carte-top">
+                <p>Meubles et <br>
+                    deco
+                </p>
+            </div>
+            <div class="carte-bottom">
+
+            </div>
+        </div>
+        <div class="nav-bar-card shadow-sm">
+            <div class="carte-top">
+                <p>Meubles et <br>
+                    deco
+                </p>
+            </div>
+            <div class="carte-bottom">
+
+            </div>
+        </div>
+        <div class="nav-bar-card shadow-sm">
+            <div class="carte-top">
+                <p>Meubles et <br>
+                    deco
+                </p>
+            </div>
+            <div class="carte-bottom">
+
+            </div>
+        </div>
+        <div class="nav-bar-card shadow-sm">
+            <div class="carte-top">
+                <p>Meubles et <br>
+                    deco
+                </p>
+            </div>
+            <div class="carte-bottom">
+
+            </div>
+        </div>
+        <div class="nav-bar-card">
+            <div class="carte-top">
+                <p>Meubles et <br>
+                    deco
+                </p>
+            </div>
+            <div class="carte-bottom">
+
+            </div>
+        </div>
+        <div class="nav-bar-card">
+            <div class="carte-top">
+                <p>Meubles et <br>
+                    deco
+                </p>
+            </div>
+            <div class="carte-bottom">
+
+            </div>
+        </div>
+        <div class="nav-bar-card">
+            <div class="carte-top">
+                <p>Meubles et <br>
+                    deco
+                </p>
+            </div>
+            <div class="carte-bottom">
+
+            </div>
+        </div>
+        <div class="nav-bar-card">
+            <div class="carte-top">
+                <p>Meubles et <br>
+                    deco
+                </p>
+            </div>
+            <div class="carte-bottom">
+
+            </div>
+        </div>
+    </div>
 </div>
