--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,10 @@
     font-family: 'Poppins', sans-serif;
 }
  /* la navigation ici  */
+body {
+  background-color: rgba(240, 255, 255, 0.568);
 
+}
 
 body nav{
     display: flex;
@@ -159,39 +162,89 @@ body .promo {
  /* la promo ici  */
 
  /* la nav bar ici  */
- body .nav-bar {
-   display: grid;
-   grid-template-columns: repeat(3, 1fr);
-   row-gap: 10px;
-   column-gap: 5px;
-   margin-top: 5px;
-   list-style: none;
-   padding: 5px;
-   font-size: 0.9rem !important;
-   margin-bottom: 20px;
- }
- .nav-bar a{
-   text-decoration: none;
-   color: #1c1b1b;
-   margin: 0%;
+ /* body .nav-bar {
+  background-color: rgba(240, 255, 255, 0.485);
 
+  } */
+  .nav-bar-card{
+    border-radius: 15px !important;
+    height: 210px;
+    width: 160px;
+    margin-left: 20px;
+    background-color: white;
+
+  }
+  #slider {
+    display: flex;
+    align-items: center;
+    transition: transform 0.5s ease-in-out;
+    /* width: 99%; */
+    width:300%;
+    height: 300px;
+    overflow-x: scroll;
+    white-space: nowrap;
+
+ 
  }
+ .slider .carte-top{
+  padding: 5px;
+  height: 50px;
+  background-color: white;
+ }
+.slider .carte-bottom{
+  background: url(/img/canaper.jpg) center/cover;
+ height: 150px;
+ width: 100%;
+
+}
+
+
+
+/* slider ici  */
 
 
  /* la nav bar ici  */
+
+
+        /* COUPON */
+        .coupon{
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          background-color: white;
+          height: 170px;
+        }
+        .coupon p{
+          margin-left: 15px;
+        }
+        .coupon .right{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: rgba(246, 176, 48, 0.13);
+          min-width:50%;
+          height: 100%;
+          border-radius: 144px 0px 0px 147px;
+          -webkit-border-radius: 144px 0px 0px 147px;
+          -moz-border-radius: 144px 0px 0px 147px;
+        }
+        /* COUPON */
+
+
+
+
 
 /* slider ici  */
 .slider-container {
    width: 100%;
    overflow: hidden;
 }
-
 .slider {
-   display: flex;
-   transition: transform 0.5s ease-in-out;
-   width: 99%;
-   overflow-x: scroll;
-   white-space: nowrap;
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  width: 99%;
+  overflow-x: scroll;
+  white-space: nowrap;
 }
 
 .article-carte {
@@ -208,6 +261,8 @@ body .promo {
     margin: 10px;
     box-sizing: border-box;
     text-align: center;
+    animation: defilement 15s linear infinite; /* Définir une animation de défilement automatique */
+
 }
 
 .article-carte img {
@@ -261,6 +316,63 @@ body .promo {
 
 /* slider ici  */
 
+/* offres special  */
+.offre-special{
+  display: flex;
+  padding: 10px;
+  background-color: white;
+  color: rgba(69, 68, 68, 0.886);
+  height: auto;
+  width: 90%;
+  border-radius: 11px;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+.offre-special .offre-img{
+  height: 150px;
+  width: 160px;
+
+}
+.offre-special img{
+  width: 160px;
+
+}
+.offre-special h4{
+  color: #A60303;
+}
+.offre-special i{
+  color: rgb(218, 190, 32);
+}
+.offre-special .bxs-cart-add{
+  font-size: 2.5rem;
+  color: #11c81d;
+}
+/* offres special  */
+
+/* avatar box  */
+.avatar-container{
+ margin-left: 21%;
+ margin-bottom: 30px;
+}
+.avatar-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  width: 100px;
+  height: 100px;
+  margin-right: 20px;
+  border-radius: 50%;
+  background-color: white;
+  margin-left: 10px;
+}
+.avatar-box  i {
+  font-size: 4rem;
+  color: #66adf5c8;
+}
+/* avatar box  */
+
  /* les cartes  */
  .row{
     margin-top: 20px;
@@ -276,6 +388,234 @@ body .promo {
     width: 130px;
  }
  /* les cartes  */
+
+ /* special card here  */
+ .special-card{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+ }
+ .card {
+   width: 290px;
+   height: auto;
+   padding: .8em;
+   background: #f5f5f5;
+   position: relative;
+   overflow: visible;
+   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  }
+  
+  .card-img {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   background-color: white;
+   height: auto;
+   width: 100%;
+   border-radius: .5rem;
+   transition: .3s ease;
+  }
+  
+  .card-info {
+   padding-top: 10%;
+  }
+  
+  svg {
+   width: 20px;
+   height: 20px;
+  }
+  
+  .card-footer {
+   width: 100%;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   padding-top: 10px;
+   border-top: 1px solid #ddd;
+  }
+  
+  /*Text*/
+  .text-title {
+   font-weight: 900;
+   font-size: 1.2em;
+   line-height: 1.5;
+  }
+  
+  .text-body {
+   font-size: .9em;
+   padding-bottom: 10px;
+  }
+  
+  /*Button*/
+  .card-button {
+   border: 1px solid #252525;
+   display: flex;
+   padding: .3em;
+   cursor: pointer;
+   border-radius: 50px;
+   transition: .3s ease-in-out;
+  }
+  
+  /*Hover*/
+  .card-img:hover {
+   transform: translateY(-25%);
+   box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
+  }
+  
+  .card-button:hover {
+   border: 1px solid #ffcaa6;
+   background-color: #ffcaa6;
+  }
+  
+ /* special card here  */
+
+ /* cool card here  */
+ .cool-card{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+ }
+ .cool-card .card {
+   --card-color: #0080ff;
+   --blub-color: #52d4eb;
+   position: relative;
+   user-select: none;
+ }
+ 
+ @keyframes keyframes-rotate-blubs {
+   0% {
+     transform: translate(10px) rotate(360deg);
+   }
+ 
+   50% {
+     transform: translate(-5px, 10px) rotate(180deg);
+   }
+ 
+   100% {
+     transform: translate(10px) rotate(0deg);
+   }
+ }
+ 
+ .cool-card .card span {
+   width: 100px;
+   height: 100px;
+   position: absolute;
+   background: linear-gradient(0deg, transparent, var(--blub-color));
+   border-radius: 100%;
+   opacity: 0.5;
+   animation: keyframes-rotate-blubs 4s infinite linear;
+ }
+ 
+ .cool-card .card span:nth-child(1) {
+   top: -5%;
+   left: -5%;
+   width: 60px;
+   height: 60px;
+   animation-delay: .1s;
+   opacity: 0.3;
+ }
+ 
+ .cool-card .card span:nth-child(2) {
+   top: 60%;
+   left: -20%;
+   width: 80px;
+   height: 80px;
+   animation-delay: .2s;
+   opacity: 0.3;
+ }
+ 
+ .cool-card .card span:nth-child(3) {
+   top: 10%;
+   left: 60%;
+   animation-delay: .3s;
+   opacity: 0.6;
+ }
+ 
+ .cool-card .card span:nth-child(4) {
+   top: 70%;
+   left: 50%;
+   width: 90px;
+   height: 90px;
+   animation-delay: .4s;
+   opacity: 0.4;
+ }
+ 
+ .cool-card .card div {
+   backdrop-filter: blur(15px);
+   outline: 1px solid var(--card-color);
+   color: var(--card-color);
+   width: 180px;
+   height: 250px;
+   border-radius: 5%;
+   padding: 1rem;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+ }
+ 
+ .cool-card .card div .check {
+   fill: var(--card-color);
+   width: 25px;
+   height: 25px;
+   position: absolute;
+   top: 0;
+   right: 0;
+   transform: translate(50%, -50%);
+ }
+ 
+ .cool-card .card div strong {
+   font-size: 1rem;
+   font-weight: 900;
+   text-transform: uppercase;
+ }
+ 
+ .cool-card .card div p {
+   font-size: 0.8rem;
+ }
+ 
+ .cool-card .card div hr {
+   border: none;
+   border-top: 1px solid var(--card-color);
+   opacity: .5;
+ }
+ 
+ .cool-card .card div button {
+   background-color: transparent;
+   color: var(--card-color);
+   border: none;
+   outline: 1px solid var(--card-color);
+   border-radius: 1rem;
+   padding: .5rem 1rem;
+   font-size: 0.8rem;
+   font-weight: 900;
+   transition: .3s;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   text-transform: uppercase;
+   gap: .2em;
+ }
+ 
+ .cool-card .card div button .arrow {
+   width: 0px;
+   height: 20px;
+   fill: var(--blub-color);
+   transform: scale(0);
+   transition: .3s;
+ }
+ 
+ .cool-card .card div button:hover .arrow {
+   width: 20px;
+   margin-left: 1em;
+   transform: scale(1);
+ }
+ 
+ .cool-card .card div button:hover {
+   background-color: var(--card-color);
+   color: var(--blub-color);
+   cursor: pointer;
+ }
+ /* cool card here  */
 
  /* APP pub ici */
  body .app-pub {
