--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
+    <!-- awesome cdn  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- box icon here  -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -24,127 +27,36 @@
         <%- include('composants/promo.ejs') %> <br>
             <%- include('composants/burger-menu.ejs') %>
                 <%- include('composants/tab-bar.ejs') %> <br>
+                <%- include('composants/coupon.ejs') %> <br>
 
-                    <!-- mon slider  -->
-                    <div class="slider-container">
-                        <h3 style="text-align: start; margin-left: 10px;">Articles visiter</h3>
-                        <div class="slider">
-                            <div class="article-carte">
-                                <img src="/img/phone.jpg" alt="Nom de l'article">
-                                <br>
-                                <p style="text-align: start;">Iphone 12 simple</br>-
-                                    <span>Rouge 250G.</span>
-                                <div class="prix">
-                                    <span class="prix-actuel"
-                                        style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
-                                        CFA</span>
-                                </div>
-                                <button>Ajouter</button>
-                            </div>
-                            <div class=" article-carte">
-                                <img src="/img/mode.jpg" alt="Nom de l'article">
-                                <br>
-                                <p style="text-align: start;">Iphone 12 simple</br>-
-                                    <span>Rouge 250G.</span>
-                                <div class="prix">
-                                    <span class="prix-actuel"
-                                        style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
-                                        CFA</span>
-                                </div>
-                                <button>Ajouter</button>
-                            </div>
-                            <div class=" article-carte">
-                                <img src="/img/canaper.jpg" alt="Nom de l'article">
-                                <br>
-                                <p style="text-align: start;">Iphone 12 simple</br>-
-                                    <span>Rouge 250G.</span>
-                                <div class="prix">
-                                    <span class="prix-actuel"
-                                        style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
-                                        CFA</span>
-                                </div>
-                                <button>Ajouter</button>
-                            </div>
-                            <div class=" article-carte">
-                                <img src="/img/frigo.jpg" alt="Nom de l'article">
-                                <br>
-                                <p style="text-align: start;">Iphone 12 simple</br>-
-                                    <span>Rouge 250G.</span>
-                                <div class="prix">
-                                    <span class="prix-actuel"
-                                        style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
-                                        CFA</span>
-                                </div>
-                                <button>Ajouter</button>
-                            </div>
-                            <div class=" article-carte">
-                                <img src="/img/phone.jpg" alt="Nom de l'article">
-                                <br>
-                                <p style="text-align: start;">Iphone 12 simple</br>-
-                                    <span>Rouge 250G.</span>
-                                <div class="prix">
-                                    <span class="prix-actuel"
-                                        style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
-                                        CFA</span>
-                                </div>
-                                <button>Ajouter</button>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- mon slider  -->
 
-                    <h3 style="text-align: start; margin: 30px 0px 30px 10px;">Nos categories</h3>
+                    <!-- mon slider visiter  -->
+                    <%- include('composants/slider-visiter.ejs') %> <br>
+                    <!-- mon slider visiter  -->
+
                     
-                    <div class="container">
-                        <div class="row" style="height: 100vh;">
-                            <div class="col ">
-                                <div class="carte">
-                                    <img src="/img/mode.jpg" alt="">
-                                    <div class="infos">
-                                        <p style="font-weight: bolder; text-align: center; margin-top: 5px;">Vetements
-                                        </p>
-                                        <p style="text-align: center;">Notre collection hommes & femmes</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="col">
-                                    <div class="carte">
-                                        <img src="/img/frigo.jpg" alt="">
-                                        <div class="infos">
-                                            <p style="font-weight: bolder; text-align: center; margin-top: 5px;">
-                                                Electromenager
-                                            </p>
-                                            <p style="text-align: center;">Notre large gamme de choix</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="carte">
-                                    <img src="/img/phone.jpg" alt="">
-                                    <div class="infos">
-                                        <p style="font-weight: bolder; text-align: center; margin-top: 5px;">Telephone &
-                                            Pc</p>
-                                        <p style="text-align: center;">Accessoires</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="col">
-                                    <div class="carte">
-                                        <img src="/img/canaper.jpg" alt="">
-                                        <div class="infos">
-                                            <p style="font-weight: bolder; text-align: center; margin-top: 5px;">Maison
-                                            </p>
-                                            <p style="text-align: center;">Meuble & decoration</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                   <!-- offres special -->
+                   <%- include('composants/offre-special.ejs') %> <br>
+                   <!-- offres special -->
+                  
+                    <br> <br> <br> <br>
+                    <!-- mon slider  telephones -->
+                    <%- include('composants/slider-telephones.ejs') %> <br>
+                    <!-- mon slider telephones -->
+                    <br> <br>
 
-                        </div>
-                    </div>
+                   <!-- cool card -->
+                   <%- include('composants/cool-card.ejs') %> <br>
+
+                   <!-- cool card -->
+
+                   <!-- avatar slide -->
+                   <%- include('composants/avatar-slide.ejs') %> <br>
+
+                   <!-- cool card -->
+                   <br>
+
+
                     <div class="app-pub">
                         <button>L'APPLI Lafyshop</button> <br>
                         <p style="text-align: center;">Hey , tu veux shopper easy ?</br>
