--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- <meta http-equiv="refresh" content="2"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
     <!-- awesome cdn  -->
@@ -50,8 +51,15 @@
 
                    <!-- cool card -->
 
+                   <!-- deux carte -->
+                   <%- include('composants/deux-card.ejs') %> <br>
+
+                   <!-- deux carte -->
+
+
+                   <br>
                    <!-- avatar slide -->
-                   <%- include('composants/avatar-slide.ejs') %> <br>
+                   <%- include('composants/grosse-card.ejs') %> <br>
 
                    <!-- cool card -->
                    <br>
