--- a/views/composants/tab-bar.ejs
+++ b/views/composants/tab-bar.ejs
@@ -13,8 +13,9 @@
         </div>
         <div class="nav-bar-card shadow-sm">
             <div class="carte-top">
-                <p>Meubles et <br>
-                    deco
+                <p>Telephone et <br>
+                    accessoires
+                    
                 </p>
             </div>
             <div class="carte-bottom">
@@ -23,8 +24,8 @@
         </div>
         <div class="nav-bar-card shadow-sm">
             <div class="carte-top">
-                <p>Meubles et <br>
-                    deco
+                <p>hommes <br>
+                    femmes
                 </p>
             </div>
             <div class="carte-bottom">
@@ -33,8 +34,8 @@
         </div>
         <div class="nav-bar-card shadow-sm">
             <div class="carte-top">
-                <p>Meubles et <br>
-                    deco
+                <p>Electro - <br>
+                    menager
                 </p>
             </div>
             <div class="carte-bottom">
