--- a/views/composants/tab-bar.ejs
+++ b/views/composants/tab-bar.ejs
@@ -8,7 +8,42 @@
                 </p>
             </div>
             <div class="carte-bottom">
-
+                <img src="/img/canaper.jpg" alt="">
+            </div>
+        </div>
+        <div class="nav-bar-card shadow-sm">
+            <div class="carte-top">
+                <p>Beauté <br>
+                </p>
+            </div>
+            <div class="carte-bottom">
+                <img src="/img/beauter.jpg" alt="">
+            </div>
+        </div>
+        <div class="nav-bar-card shadow-sm">
+            <div class="carte-top">
+                <p>Bijoux et <br> montre <br>
+                </p>
+            </div>
+            <div class="carte-bottom">
+                <img src="/img/bijoux.jpg" alt="">
+            </div>
+        </div>
+        <div class="nav-bar-card shadow-sm">
+            <div class="carte-top">
+                <p>Location de <br> maison <br>
+                </p>
+            </div>
+            <div class="carte-bottom">
+                <img src="/img/maison.webp" alt="">
+            </div>
+        </div>
+        <div class="nav-bar-card shadow-sm">
+            <div class="carte-top">
+                <p>Location de <br> véhicule</p>
+            </div>
+            <div class="carte-bottom">
+                <img src="/img/voiture.jpg" alt="">
             </div>
         </div>
         <div class="nav-bar-card shadow-sm">
@@ -19,16 +54,29 @@
                 </p>
             </div>
             <div class="carte-bottom">
+                <img src="/img/xr.jpg" alt="">
+            </div>
+        </div>
+       
+        <div class="nav-bar-card shadow-sm">
+            <div class="carte-top">
+                <p>Vêtements et <br>
+                    chaussures Femme 
+                </p>
+            </div>
+            <div class="carte-bottom">
+                <img src="/img/femme.jpg" width="40" alt="">
 
             </div>
         </div>
         <div class="nav-bar-card shadow-sm">
             <div class="carte-top">
-                <p>hommes <br>
-                    femmes
+                <p>Vêtements et <br>
+                    chaussures Homme 
                 </p>
             </div>
             <div class="carte-bottom">
+                <img src="/img/homme.jpg" alt="">
 
             </div>
         </div>
@@ -39,98 +87,11 @@
                 </p>
             </div>
             <div class="carte-bottom">
+                <img src="/img/mixer.jpg" width="30" alt="">
 
             </div>
         </div>
-        <div class="nav-bar-card shadow-sm">
-            <div class="carte-top">
-                <p>Meubles et <br>
-                    deco
-                </p>
-            </div>
-            <div class="carte-bottom">
-
-            </div>
-        </div>
-        <div class="nav-bar-card shadow-sm">
-            <div class="carte-top">
-                <p>Meubles et <br>
-                    deco
-                </p>
-            </div>
-            <div class="carte-bottom">
-
-            </div>
-        </div>
-        <div class="nav-bar-card shadow-sm">
-            <div class="carte-top">
-                <p>Meubles et <br>
-                    deco
-                </p>
-            </div>
-            <div class="carte-bottom">
-
-            </div>
-        </div>
-        <div class="nav-bar-card shadow-sm">
-            <div class="carte-top">
-                <p>Meubles et <br>
-                    deco
-                </p>
-            </div>
-            <div class="carte-bottom">
-
-            </div>
-        </div>
-        <div class="nav-bar-card shadow-sm">
-            <div class="carte-top">
-                <p>Meubles et <br>
-                    deco
-                </p>
-            </div>
-            <div class="carte-bottom">
-
-            </div>
-        </div>
-        <div class="nav-bar-card">
-            <div class="carte-top">
-                <p>Meubles et <br>
-                    deco
-                </p>
-            </div>
-            <div class="carte-bottom">
-
-            </div>
-        </div>
-        <div class="nav-bar-card">
-            <div class="carte-top">
-                <p>Meubles et <br>
-                    deco
-                </p>
-            </div>
-            <div class="carte-bottom">
-
-            </div>
-        </div>
-        <div class="nav-bar-card">
-            <div class="carte-top">
-                <p>Meubles et <br>
-                    deco
-                </p>
-            </div>
-            <div class="carte-bottom">
-
-            </div>
-        </div>
-        <div class="nav-bar-card">
-            <div class="carte-top">
-                <p>Meubles et <br>
-                    deco
-                </p>
-            </div>
-            <div class="carte-bottom">
-
-            </div>
-        </div>
+        
+                
     </div>
 </div>
