--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <!-- <meta http-equiv="refresh" content="2"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
    
     <!-- awesome cdn  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -27,7 +29,7 @@
 
         <%- include('composants/promo.ejs') %> <br>
             <%- include('composants/burger-menu.ejs') %>
-                <%- include('composants/tab-bar.ejs') %> <br>
+                <%- include('composants/tab-bar.ejs') %> 
                 <%- include('composants/coupon.ejs') %> <br>
 
 
@@ -47,7 +49,7 @@
                     <br> <br>
 
                    <!-- cool card -->
-                   <%- include('composants/cool-card.ejs') %> <br>
+                   <%- include('composants/cool-card.ejs') %> <br> <br>
 
                    <!-- cool card -->
 
@@ -58,10 +60,22 @@
 
 
                    <br>
-                   <!-- avatar slide -->
+                   <!-- grosse carte  -->
                    <%- include('composants/grosse-card.ejs') %> <br>
 
-                   <!-- cool card -->
+                   <!-- grosse cart -->
+                   <br>
+                   <br>
+                   <!-- mode slider  -->
+                   <%- include('composants/slider-mode.ejs') %> <br>
+
+                   <!-- mode slider -->
+                   <br>
+                   <br>
+                   <!-- electro slider  -->
+                   <%- include('composants/slider-electro.ejs') %> <br>
+
+                   <!-- electro slider -->
                    <br>
 
 
