--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,19 @@ body {
   background-color: rgba(240, 255, 255, 0.568);
 
 }
+body .page-top{
+  background-color: #A60303;
+  height: auto;
+  padding-bottom: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed; 
+    z-index: 5; 
+    top: 0;         
+    left: 0;         
+    width: 100%;  
+}
 
 body nav{
     display: flex;
@@ -59,6 +72,135 @@ nav #bx-search{
 
 
  /* la navigation ici  */
+
+ /* la barre de recherche ici */
+
+ /* From uiverse.io by @satyamchaudharydev */
+/* this button is inspired by -- whatsapp input */
+/* == type to see fully interactive and click the close buttom to remove the text  == */
+
+.form {
+  --input-bg: #FFf;
+ /*  background of input */
+  --padding: 1.5em;
+  --rotate: 80deg;
+ /*  rotation degree of input*/
+  --gap: 2em;
+  /*  gap of items in input */
+  --icon-change-color: #15A986;
+ /*  when rotating changed icon color */
+  --height: 40px;
+ /*  height */
+  width:95%;
+  margin-top: 65px;
+  padding-inline-end: 1em;
+ /*  change this for padding in the end of input */
+  background: var(--input-bg);
+  position: relative;
+  border-radius: 4px;
+}
+
+.form label {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 32px;
+  margin-bottom: 5px;
+  /* height: var(--height); */
+}
+
+.form input {
+  width: 100%;
+  padding-inline-start: calc(var(--padding) + var(--gap));
+  outline: none;
+  background: none;
+  border: 0;
+  height: 100%;
+  margin: auto;
+}
+/* style for both icons -- search,close */
+.form svg {
+  /* display: block; */
+  color: #111;
+  transition: 0.3s cubic-bezier(.4,0,.2,1);
+  position: absolute;
+  height: 15px;
+}
+/* search icon */
+.icon {
+  position: absolute;
+  left: var(--padding);
+  transition: 0.3s cubic-bezier(.4,0,.2,1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* arrow-icon*/
+.swap-off {
+  transform: rotate(-80deg);
+  opacity: 0;
+  visibility: hidden;
+}
+/* close button */
+.close-btn {
+  /* removing default bg of button */
+  background: none;
+  border: none;
+  right: calc(var(--padding) - var(--gap));
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #111;
+  padding: 0.1em;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  transition: 0.3s;
+  opacity: 0;
+  transform: scale(0);
+  visibility: hidden;
+}
+
+.form input:focus ~ .icon {
+  transform: rotate(var(--rotate)) scale(1.3);
+}
+
+.form input:focus ~ .icon .swap-off {
+  opacity: 1;
+  transform: rotate(-80deg);
+  visibility: visible;
+  color: var(--icon-change-color);
+}
+
+.form input:focus ~ .icon .swap-on {
+  opacity: 0;
+  visibility: visible;
+}
+
+.form input:valid ~ .icon {
+  transform: scale(1.3) rotate(var(--rotate))
+}
+
+.form input:valid ~ .icon .swap-off {
+  opacity: 1;
+  visibility: visible;
+  color: var(--icon-change-color);
+}
+
+.form input:valid ~ .icon .swap-on {
+  opacity: 0;
+  visibility: visible;
+}
+
+.form input:valid ~ .close-btn {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
+  transition: 0s;
+}
+
+ /* la barre de recherche ici */
 
  /* burger menu ici  */
  body .burger-nav {
@@ -151,7 +293,7 @@ nav #bx-search{
 
  /* la promo ici  */
 body .promo {
-    margin-top: 73px;
+    margin-top: 110px;
     background-image: linear-gradient(to left, rgb(166, 255, 0), rgb(29, 222, 141));
     padding: 10px 0px 10px 0px;
     font-weight: bolder;
@@ -166,36 +308,59 @@ body .promo {
   background-color: rgba(240, 255, 255, 0.485);
 
   } */
+  .slider-container{
+    margin-bottom: 18px;
+  }
   .nav-bar-card{
-    border-radius: 15px !important;
+    /* border-radius: 15px !important;
     height: 210px;
     width: 160px;
     margin-left: 20px;
-    background-color: white;
+    background-color: white; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 0 0 auto; /* Supprimer la largeur fixe et permettre une largeur flexible */
+    padding: 10px;
+    box-sizing: border-box;
+    text-align: center;
+     width: 150px; /* 4 est le nombre d'éléments .article-carte par ligne */
+     padding: 5px;
+     margin: 5px;
+     box-sizing: border-box;
+     text-align: center;
+     background-color: white;
 
+  }
+  .nav-bar-card p{
+    font-size: 0.9rem;
   }
   #slider {
     display: flex;
-    align-items: center;
     transition: transform 0.5s ease-in-out;
-    /* width: 99%; */
-    width:300%;
-    height: 300px;
+    max-width: 99%;
     overflow-x: scroll;
-    white-space: nowrap;
+    white-space: nowrap
 
- 
  }
+
  .slider .carte-top{
   padding: 5px;
   height: 50px;
   background-color: white;
  }
 .slider .carte-bottom{
-  background: url(/img/canaper.jpg) center/cover;
  height: 150px;
  width: 100%;
+ display: flex;
+ align-items: center;
+ justify-content: center;
 
+}
+.carte-bottom img{
+  object-fit: cover;
+  width: 100px;
 }
 
 
@@ -236,13 +401,13 @@ body .promo {
 
 /* slider ici  */
 .slider-container {
-   width: 100%;
+   width: 99%;
    overflow: hidden;
 }
 .slider {
   display: flex;
   transition: transform 0.5s ease-in-out;
-  width: 99%;
+  max-width: 99%;
   overflow-x: scroll;
   white-space: nowrap;
 }
@@ -252,13 +417,13 @@ body .promo {
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   flex: 0 0 20%;
+   flex: 0 0 auto; /* Supprimer la largeur fixe et permettre une largeur flexible */
    padding: 10px;
    box-sizing: border-box;
    text-align: center;
-   width: 250px; /* 4 est le nombre d'éléments .article-carte par ligne */
+    width: 150px; /* 4 est le nombre d'éléments .article-carte par ligne */
     padding: 5px;
-    margin: 10px;
+    margin: 5px;
     box-sizing: border-box;
     text-align: center;
     animation: defilement 15s linear infinite; /* Définir une animation de défilement automatique */
@@ -387,16 +552,24 @@ body .promo {
 
 /* deux card  */
 .deux-card-container{
+  box-sizing: border-box;
   padding: 10px;
   display: flex;
   justify-content: center;
   background-color: transparent;
   margin-bottom: 70px;
+  height: 380px;
 }
 .deux-card-container .carte{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 5px;
+  margin: 5px;
+  margin-bottom: 10px;
   width: 48%;
-  height: 300px;
+  height: 320px;
   background-color: white;
 }
 .deux-card-container img{
