--- a/views/composants/deux-card.ejs
+++ b/views/composants/deux-card.ejs
@@ -1,9 +1,9 @@
-<h3 style="text-align: start; margin-left: 10px;">Telephone & Accessoires</h3>
+<h3 style="text-align: start; margin-left: 10px;">Les offres du moments</h3>
 <div class="deux-card-container">
         <div class="carte shadow-sm">
             <img src="/img/phone.jpg" width="100px" alt="Nom de l'article">
             <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
+            <p style="text-align: center;">Iphone 12 simple</br>-
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel" style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
@@ -13,11 +13,11 @@
         </div>
         <div class="carte shadow-sm">
             <img src="/img/airpod.jpg" width="100px" alt="Nom de l'article">
-            <br><br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
+            <br>
+            <p style="text-align: center;">Air pods</br>-
+                <span>Derniere generation</span>
             <div class="prix">
-                <span class="prix-actuel" style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                <span class="prix-actuel" style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">150.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
