--- a/views/composants/tab-bar.ejs
+++ b/views/composants/tab-bar.ejs
@@ -82,6 +82,17 @@
         </div>
         <div class="nav-bar-card shadow-sm">
             <div class="carte-top">
+                <p>Vêtements <br>
+                    enfants
+                </p>
+            </div>
+            <div class="carte-bottom">
+                <img src="/img/enfants.webp" alt="">
+
+            </div>
+        </div>
+        <div class="nav-bar-card shadow-sm">
+            <div class="carte-top">
                 <p>Electro - <br>
                     menager
                 </p>
