--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,6 +77,10 @@
 
                    <!-- electro slider -->
                    <br>
+                     <!-- deux carte -->
+                     <%- include('composants/deux-card.ejs') %> <br>
+
+                     <!-- deux carte -->
 
 
                     <div class="app-pub">
