--- a/views/composants/tab-bar.ejs
+++ b/views/composants/tab-bar.ejs
@@ -46,9 +46,9 @@
                 <img src="/img/voiture.jpg" alt="">
             </div>
         </div>
-        <div class="nav-bar-card shadow-sm">
+        <div class="nav-bar-card shadow-sm" onclick="phone()">
             <div class="carte-top">
-                <p>Telephone et <br>
+                <p>Telephone, Pc et<br>
                     accessoires
                     
                 </p>
